# DeskPilot

./: .env.example  .gitignore  example_task.yaml  implementation_plan.md  pyproject.toml  readme.md  run.py
configs/: xfce_apps.yaml
docker/: Dockerfile  docker-compose.yml  supervisord.conf
docs/: AI_CONTEXT.md  State_Machine_Diagram.md  architecture_and_flow.md
scripts/: vision_only.py
src/cua_backend/: main.py
src/cua_backend/agent/: __init__.py  core.py  planner.py  state.py
src/cua_backend/app/: main.py
src/cua_backend/execution/: __init__.py  actions.py  browser_controller.py  desktop_controller.py  executor.py
src/cua_backend/llm/: __init__.py  base.py  gemini_client.py  openrouter_client.py  prompt_templates.py
src/cua_backend/perception/: __init__.py  browser_state.py  ocr.py  screenshot.py
src/cua_backend/schemas/: __init__.py  actions.py  tasks.py
src/cua_backend/utils/: __init__.py  constants.py  logger.py
